// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlagContent calls submit successfully with category:other 1`] = `
<FlagContent
  explanation=""
  highlightRequired={false}
  linkData={
    Object {
      "id": 33,
      "type": "post",
    }
  }
  onClose={[MockFunction]}
  promptVisible={false}
  reasonRequired={false}
  submitFlagContent={[MockFunction]}
  type="post"
  visible={true}
>
  <div
    className="popup"
  >
    <div
      className="popup-inner"
    >
      <h1>
        Explanation for Flagging
      </h1>
      <span
        className="close-btn"
        onClick={[Function]}
      >
        <Icon
          className="icon"
          name="Ex"
        >
          <span
            className="icon-Ex icon icon"
          />
        </Icon>
      </span>
      <div
        className="content"
      >
        <div
          className="reason"
        >
          <Select
            className=""
            fullWidth={true}
            onChange={[Function]}
            options={
              Array [
                Object {
                  "id": "inappropriate",
                  "label": "Inappropriate Content",
                },
                Object {
                  "id": "spam",
                  "label": "Spam",
                },
                Object {
                  "id": "offensive",
                  "label": "Offensive",
                },
                Object {
                  "id": "illegal",
                  "label": "Illegal",
                },
                Object {
                  "id": "other",
                  "label": "Other",
                },
              ]
            }
            placeholder="Select a reason"
            selected=""
          >
            <label
              className="select-wrapper"
              style={
                Object {
                  "width": "100%",
                }
              }
            >
              <select
                className="select"
                onChange={[Function]}
                style={
                  Object {
                    "width": "100%",
                  }
                }
                value=""
              >
                <option
                  disabled={true}
                  value=""
                >
                  Select a reason
                </option>
                <option
                  key="inappropriate"
                  value="inappropriate"
                >
                  Inappropriate Content
                </option>
                <option
                  key="spam"
                  value="spam"
                >
                  Spam
                </option>
                <option
                  key="offensive"
                  value="offensive"
                >
                  Offensive
                </option>
                <option
                  key="illegal"
                  value="illegal"
                >
                  Illegal
                </option>
                <option
                  key="other"
                  value="other"
                >
                  Other
                </option>
              </select>
            </label>
          </Select>
        </div>
        <TextareaAutosize
          className="explanation-textbox"
          minRows={6}
          onChange={[Function]}
          onHeightChange={[Function]}
          placeholder="What was wrong?"
          useCacheForDOMMeasurements={false}
          value=""
        >
          <textarea
            className="explanation-textbox"
            onChange={[Function]}
            placeholder="What was wrong?"
            style={
              Object {
                "height": 0,
              }
            }
            value=""
          />
        </TextareaAutosize>
        <Button
          className="submit-btn"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="submit-btn button green disabled"
            role="button"
            tabIndex={0}
          >
            Submit
          </div>
        </Button>
      </div>
    </div>
  </div>
</FlagContent>
`;

exports[`FlagContent changes title based on type 1`] = `
<div
  className="popup"
>
  <div
    className="popup-inner"
  >
    <h1>
      Explanation for Flagging
    </h1>
    <span
      className="close-btn"
      onClick={[Function]}
    >
      <Icon
        className="icon"
        name="Ex"
      />
    </span>
    <div
      className="content"
    >
      <div
        className="reason"
      >
        <Select
          className=""
          fullWidth={true}
          onChange={[Function]}
          options={
            Array [
              Object {
                "id": "inappropriate",
                "label": "Inappropriate Content",
              },
              Object {
                "id": "spam",
                "label": "Spam",
              },
              Object {
                "id": "offensive",
                "label": "Offensive",
              },
              Object {
                "id": "illegal",
                "label": "Illegal",
              },
              Object {
                "id": "other",
                "label": "Other",
              },
            ]
          }
          placeholder="Select a reason"
          selected=""
        />
      </div>
      <TextareaAutosize
        className="explanation-textbox"
        minRows={6}
        onChange={[Function]}
        onHeightChange={[Function]}
        placeholder="What was wrong?"
        useCacheForDOMMeasurements={false}
        value=""
      />
      <Button
        className="submit-btn"
        disabled={true}
        onClick={[Function]}
      >
        Submit
      </Button>
    </div>
  </div>
</div>
`;

exports[`FlagContent matches the last snapshot 1`] = `
<div
  className="popup"
>
  <div
    className="popup-inner"
  >
    <h1>
      Explanation for Flagging
    </h1>
    <span
      className="close-btn"
      onClick={[Function]}
    >
      <Icon
        className="icon"
        name="Ex"
      />
    </span>
    <div
      className="content"
    >
      <div
        className="reason"
      >
        <Select
          className=""
          fullWidth={true}
          onChange={[Function]}
          options={
            Array [
              Object {
                "id": "inappropriate",
                "label": "Inappropriate Content",
              },
              Object {
                "id": "spam",
                "label": "Spam",
              },
              Object {
                "id": "offensive",
                "label": "Offensive",
              },
              Object {
                "id": "illegal",
                "label": "Illegal",
              },
              Object {
                "id": "other",
                "label": "Other",
              },
            ]
          }
          placeholder="Select a reason"
          selected=""
        />
      </div>
      <TextareaAutosize
        className="explanation-textbox"
        minRows={6}
        onChange={[Function]}
        onHeightChange={[Function]}
        placeholder="What was wrong?"
        useCacheForDOMMeasurements={false}
        value=""
      />
      <Button
        className="submit-btn"
        disabled={true}
        onClick={[Function]}
      >
        Submit
      </Button>
    </div>
  </div>
</div>
`;
